--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
 </head>
 <body>
     <div class="little-triangle"></div>
+    <hr>
+    <button class="cancel-btn" type="button">
+        <span>Cancel</span>
+    </button>
 </body>
 </html>
