--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Little Demo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="./little-triangle.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="./little-demo.css" />
 </head>
+
 <body>
     <div class="little-triangle"></div>
-    <hr>
+    <br>
     <button class="cancel-btn" type="button">
         <span>Cancel</span>
     </button>
+
+
 </body>
+
 </html>
