--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -1,10 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE > lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>bootstrap</title>
+    <link rel="stylesheet" href="./for-bootstrap.css">
+
+    <!-- fontawsome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
+
+    <!-- jquery -->
+    <script src="../jquery/jquery.min.js"></script>
+
     <!-- bootstrap version3 -->
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
@@ -18,7 +26,99 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
         crossorigin="anonymous"></script>
 </head>
+
 <body>
     <button class="btn btn-default">below is bootstrap</button>
+    <div class="nav-side-menu">
+        <div class="brand">Brand Logo</div>
+        <i class="fa fa-bars fa-2x toggle-btn" data-toggle="collapse" data-target="#menu-content"></i>
+        <div class="menu-list">
+            <ul id="menu-content" class="menu-content collapse out">
+                <li>
+                    <a href="#">
+                        <i class="fa fa-dashboard fa-lg"></i> Dashboard
+                    </a>
+                </li>
+                <li data-toggle="collapse" data-target="#products" class="collapsed active">
+                    <a href="#">
+                        <i class="fa fa-gift fa-lg"></i> UI Elements
+                        <span class="arrow"></span>
+                    </a>
+                </li>
+                <ul class="sub-menu collapse" id="products">
+                    <li class="active">
+                        <a href="#">CSS3 Animation</a>
+                    </li>
+                    <li>
+                        <a href="#">General</a>
+                    </li>
+                    <li>
+                        <a href="#">Buttons</a>
+                    </li>
+                    <li>
+                        <a href="#">Tabs &amp; Accordions</a>
+                    </li>
+                    <li>
+                        <a href="#">Typography</a>
+                    </li>
+                    <li>
+                        <a href="#">FontAwesome</a>
+                    </li>
+                    <li>
+                        <a href="#">Slider</a>
+                    </li>
+                    <li>
+                        <a href="#">Panels</a>
+                    </li>
+                    <li>
+                        <a href="#">Widgets</a>
+                    </li>
+                    <li>
+                        <a href="#">Bootstrap Model</a>
+                    </li>
+                </ul>
+                <li data-toggle="collapse" data-target="#service" class="collapsed">
+                    <a href="#">
+                        <i class="fa fa-globe fa-lg"></i> Services
+                        <span class="arrow"></span>
+                    </a>
+                </li>
+                <ul class="sub-menu collapse" id="service">
+                    <li>New Service 1</li>
+                    <li>New Service 2</li>
+                    <li>New Service 3</li>
+                </ul>
+
+
+                <li data-toggle="collapse" data-target="#new" class="collapsed">
+                    <a href="#">
+                        <i class="fa fa-car fa-lg"></i> New
+                        <span class="arrow"></span>
+                    </a>
+                </li>
+                <ul class="sub-menu collapse" id="new">
+                    <li>New New 1</li>
+                    <li>New New 2</li>
+                    <li>New New 3</li>
+                </ul>
+                <li>
+                    <a href="#">
+                        <i class="fa fa-user fa-lg"></i> Profile
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="fa fa-users fa-lg"></i> Users
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <div class="container" id="main">
+        <div class="row">
+            <div class="col-md-12">
+                <h4>This is suppose to be in the main content</h4>
+            </div>
+        </div>
+    </div>
 </body>
-</html>
