--- a/bootstrap/mask.html
+++ b/bootstrap/mask.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>mask</title>
     <link rel="stylesheet" href="./for-bootstrap.css">
-    <link rel="stylesheet" href="./mask.css">
 
     <!-- fontawsome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ"
@@ -23,7 +22,45 @@
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
         crossorigin="anonymous">
+    <style>
+        .box {
+            display: inline-block !important;
+            position: relative !important;
+            overflow: hidden;
+        }
 
+        .mask {
+            visibility: hidden;
+            opacity: 0;
+            transition: visibility 0s linear 0.5s, opacity 0.5s linear;
+        }
+
+        .box a {
+            color: transparent;
+        }
+
+        .box a:hover .mask {
+            visibility: visible;
+            opacity: 1;
+            transition-delay: 0s;
+            text-align: center;
+            position: absolute;
+            background-color: rgba(255, 0, 0, 0.58);
+            color: #fff;
+            width: 100%;
+            height: 100%;
+            text-shadow: 0 1px 2px rgba(0, 0, 0, .6);
+        }
+
+        .mask span {
+            margin: auto;
+            position: absolute;
+            top: 0;
+            left: 0;
+            bottom: 0;
+            right: 0
+        }
+    </style>
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
         crossorigin="anonymous"></script>
